--- a/Project1/Base.lproj/Main.storyboard
+++ b/Project1/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -44,6 +45,35 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkZ-Sw-2xH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="423.1884057971015" y="6.6964285714285712"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="X9U-r9-faS">
+            <objects>
+                <viewController id="ULd-2q-uwW" customClass="DetailViewController" customModule="Project1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="88Q-Ig-YTv">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a0L-GU-Kl8">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="nYE-yz-WI4"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="a0L-GU-Kl8" firstAttribute="centerX" secondItem="88Q-Ig-YTv" secondAttribute="centerX" id="1dG-4Q-4Mr"/>
+                            <constraint firstItem="a0L-GU-Kl8" firstAttribute="leading" secondItem="nYE-yz-WI4" secondAttribute="leading" id="CMS-yC-3Ae"/>
+                            <constraint firstItem="a0L-GU-Kl8" firstAttribute="top" secondItem="88Q-Ig-YTv" secondAttribute="topMargin" constant="-44" id="J6o-51-ZpW"/>
+                            <constraint firstItem="a0L-GU-Kl8" firstAttribute="centerY" secondItem="88Q-Ig-YTv" secondAttribute="centerY" id="fEf-Iw-a01"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="a0L-GU-Kl8" id="c7h-fx-QXd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="H4s-rf-nbN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1348" y="7"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="iKL-Vd-ItT">
